# grafite

./: README.md  compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client/: .env.container.template  .env.development  .eslintignore  .eslintrc.json  .gitignore  .stylelintrc.json  Dockerfile  README.md  custom.d.ts  lint-staged.config.mjs  next-auth.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
client/src/: middleware.ts
client/src/app/: auth.ts  (+2 more)
server/: .dockerignore  .env.container.template  .env.template  .gitignore  Dockerfile  Dockerfile.Runner  README.md  init.sh  pyproject.toml
server/seed/: issue.json  run.json  run_20251212040835.json  run_20251219203720.json  settings.json  test.json
server/src/grafite/: constants.py
server/src/grafite/db/: _mongodb_interface.py  mongodb.py
server/src/grafite/messaging/: rabbit.py
server/src/grafite/middlewares/: loggerMiddleware.py
server/src/grafite/routers/: feedback.py  issue.py  log.py  result.py  run.py  settings.py  test.py
server/src/grafite/schemas/: common.py  feedback.py  issue.py  log.py  result.py  run.py  settings.py  test.py
server/src/grafite/serve/: controller.py
server/src/grafite/services/: digit_listener.py
server/src/grafite/validators/llmjudge/: judge.py  templates.py
server/src/test_runner_service/: __init__.py  constants.py  schemas.py  test_runner_svc.py  test_runner_wrapper.py  utils.py
server/src/test_runner_service/providers/: ollama.py  provider.py  provider_factory.py  watsonx.py
(+319 files in other folders)
